# AdventOfCode2023

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirement.txt
.github/workflows/: ci.yaml
AdventOfCode2023/src/1/: solution.py
AdventOfCode2023/src/10/: solution.py
AdventOfCode2023/src/11/: solution.py
AdventOfCode2023/src/2/: solution.py
AdventOfCode2023/src/3/: solution.py
AdventOfCode2023/src/4/: solution.py
AdventOfCode2023/src/5/: solution.py
AdventOfCode2023/src/6/: solution.py
AdventOfCode2023/src/7/: Hand.py  HandJoker.py  solution.py
AdventOfCode2023/src/8/: solution.py
AdventOfCode2023/src/9/: solution.py
script/: setup  test
src/1/: solution.py
src/4/: solution.py
src/5/: solution.py
src/6/: solution.py
src/7/: Hand.py  HandJoker.py  solution.py
test/: test.py  test_solutions.py
