[tool.poetry]
name = "AdventOfCode2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Marcin Ligeza <marcin.ligeza2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.12"
numpy = "^1.26.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

